[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyLynx"
version = "3.0.1"
description = "Lynx: Local Yard for Notes and eXercises"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.0",
  "pygments>=2.16",
  "pillow>=10.0",
  "pathspec>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
lynx = "lynx.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
