[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyLynx"
version = "3.0.1"
description = "Lynx: Lectures' Yet aNother eXporter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.0",
  "pygments>=2.16",
  "pillow>=10.0",
  "pathspec>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1.1",
]

[project.scripts]
lynx = "lynx.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
